# x-active-window-indicator

./: .clang-tidy  .gitignore  CMakeLists.txt  PKGBUILD  PRESUBMIT.sh  PRESUBMIT_destructive.sh  README.md  TODO.txt  iwyu.imp
include/: active_window_indicator.h  active_window_observer.h  active_window_tracker.h  border_window.h  connection.h  event.h  event_dispatcher.h  event_loop.h  event_loop_idle_observer.h  key_listener.h  key_state_observer.h  observable.h  scoped_observer.h  util.h  window_geometry_observer.h  window_geometry_tracker.h  x_error.h
src/: active_window_indicator.cpp  active_window_indicator.h  active_window_manager.cpp  active_window_manager.h  active_window_observer.h  active_window_tracker.cpp  active_window_tracker.h  border_window.cpp  border_window.h  command_line.cpp  command_line.h  connection.cpp  connection.h  event.cpp  event.h  event_dispatcher.h  event_loop.cpp  event_loop.h  event_loop_idle_observer.h  indicator.cpp  key_listener.cpp  key_listener.h  key_state_observer.h  lippincott.cpp  lippincott.h  main.cpp  observable.h  p_error.cpp  p_error.h  quit_signaller.cpp  quit_signaller.h  scoped_observer.h  usage_error.cpp  usage_error.h  util.h  window_geometry_observer.h  window_geometry_tracker.cpp  window_geometry_tracker.h  x_error.cpp  x_error.h
